a do-over on 'fixing' the comment input selectors   - brought back 1 of the ID-based CSS selectors, but...   - ...no longer wrapping the comment form just to put a class on it   - ...and: may still be able to fix that '#reply-title' business

--- a/src/scss/_comments.scss
+++ b/src/scss/_comments.scss
@@ -1,5 +1,4 @@
-.comments-title,
-.comment { clear: both; }
+.comments-title, .comment { clear: both; }
 
 .comments-title {
   margin: {
@@ -10,9 +9,7 @@
 
 .comment {
   padding: 0 1em;
-  
   &:nth-child(odd) { @include basic-linear-grader(white, lighten($f_d-desat, 50%), 92%); }
-  
   .permalink { float: right; }
 }
 
@@ -25,11 +22,9 @@
   }
 }
 
-.comments-ct {
-  padding-top: $_24th;
+#reply-title { padding-top: $_24th; }
 
-  input,
-  textarea { display: block; }
-  
+.post {
+  input, textarea { display: block; }
   .required { color: $f_d-color; }
 }
